# folium

./: .appveyor.yml  .doctr-files  .gitattributes  .gitignore  .pre-commit-config.yaml  .stickler.yml  .travis.yaml  .travis.yml  CHANGES.txt  CODE_OF_CONDUCT.md  IntelliLang.xml  LICENSE.txt  MANIFEST.in  README.md  README.rst  README.txt  SECURITY.md  baseRefactoring.xml  code.style.schemes  conf.py  diff.xml  environment.yml  filetypes.xml  find.xml  flask.html  genindex.html  github_deploy_key.enc  github_deploy_key_python_visualization_folium.enc  github_settings.xml  iconTest.html  ide.general.xml  ignore.xml  index.html  index.rst  installing.html  jdk.table.xml  languagetest.py  map.py  modules.html  notifications.xml  (+18 more)
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  dependabot.yml
.streamlit/: config.toml
_mac/: git.xml
codestyles/: Default.xml
dev/: .buildinfo  .doctr-files  advanced_guide.html  flask.html  genindex.html  getting_started.html  getting_started.ipynb  index.html  installing.html  modules.html  objects.inv  plugins.html  py-modindex.html  reference.html  search.html  searchindex.js  user_guide.html
docs/: Makefile  Quickstart.md  advanced_guide.rst  conf.py  contributing.rst  examples.rst  flask.rst  genindex.html  getting_started.md  getting_started.rst  index.html  index.rst  installing.rst  module.rst  modules.rst  overview.md  plugins.rst  quickstart.md  quickstart.rst  reference.rst  search.html  update_switcher.py  user_guide.rst
examples/: 1000_ClusteredMarkers.ipynb  1000_MarkerCluster.ipynb  CRS comparison.ipynb  CRS.ipynb  CRS_comparison.ipynb  CheckZorder.ipynb  Choropleth with Jenks natural breaks optimization.ipynb  ClickEvents.ipynb  Colormaps.ipynb  ContinuousWorld.ipynb  ControlScale.ipynb  Crossfilter example.ipynb  CustomIcon.ipynb  CustomPanes.ipynb  DateLineExample.ipynb  Draw.ipynb  FastMarkerCluster.ipynb  FeatureGroup.ipynb  Features.ipynb  FitOverlays.ipynb  FloatImage.ipynb  Folium_and_mplleaflet.ipynb  GeoJSON and choropleth.ipynb  GeoJSONMarker.ipynb  GeoJSONWithoutTitles.ipynb  GeoJSON_and_choropleth.ipynb  GeoJsonCSS.ipynb  GeoJsonPopupAndTooltip.ipynb  GeodedeticImageOverlay.ipynb  GulfStreamImageOverlay.ipynb  Hacking_folium_3D_globe.ipynb  HeatMapWithTime example.ipynb  HeatMapWithTime.ipynb  Heatmap.ipynb  HereMapsApiExplorer_no_creds.ipynb  Highlight_Function.ipynb  Jenks.ipynb  MarkerCluster.ipynb  MeasureControl.ipynb  MinMaxLimits.ipynb  (+89 more)
folium/: __init__.py  _server.py  _version.py  colormap.py  element.py  elements.py  example_data.py  features.py  figure.py  folium.py  iconTest.html  json_layers.py  map.html  map.py  markers.py  raster_layers.py  six.py  test.py  (+3 more)
folium.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+2217 files in other folders)
