[build-system]
requires = ["setuptools>=41.2", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
fail-under = 85
exclude = ["setup.py", "docs", "tests"]
verbose = 1
quiet = false
color = true

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
select = [
    "F", # flakes
    "I", # import sorting
    "U", # upgrade
]
target-version = "py37"
line-length = 120

[tool.ruff.per-file-ignores]
"docs/conf.py" = ["E402"]
