# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = folium/_version.py
versionfile_build = folium/_version.py
tag_prefix = v
parentdir_prefix =

[tool:pytest]
flake8-max-line-length = 120
flake8-ignore =
    docs/* ALL
    versioneer.py ALL
    folium/_version.py ALL

[metadata]
description-file = README.md
license_file = LICENSE.txt

[bdist_wheel]
universal = 1

[check-manifest]
ignore = 
    *.yml
    docs
    docs/*
    *.enc
    tests
    tests/*
