[tool:pytest]
flake8-max-line-length = 121
flake8-ignore =
    docs/* ALL
select = C,E,F,W,B,B950
ignore = E203, E501, W503

[metadata]
description-file = README.md
license_file = LICENSE.txt

[bdist_wheel]
universal = 1

[check-manifest]
ignore =
    *.yml
    docs
    docs/*
    *.enc
    tests
    tests/*
